app-backend/kubernets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "backend-namespace"
  labels:
    name: "backend-namespace"
