app-backend/kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: "backend-namespace"
  labels:
    app: backend-label
    app.kubernetes.io/name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-label
  template:
    metadata:
      labels:
        app: backend-label
    spec:
      containers:
      - name: backend-app
        image: williansmartins/app-backend:v3
        ports:
          - containerPort: 8080
  strategy:
    type: RollingUpdate
