app-backend/kubernets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: "backend-namespace"
  labels:
    app: backend-label
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31000 #porta externa do cluster
