app-backend/kubernets/netpol-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "backend-networkpolicy-egress"
  namespace: "backend-namespace"
  labels:
    app: backend-label
    app.kubernetes.io/name: backend-app
spec:
  podSelector:
    matchLabels:
      app: backend-label
      app.kubernetes.io/name: backend-app
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: "mysql-namespace"
      podSelector:
        matchLabels:
          app: mysql-label
          app.kubernetes.io/name: mysql-app
    ports:
      - protocol: TCP
        port: 3306
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: "frontend-namespace"
      podSelector:
        matchLabels:
          app: frontend-label
          app.kubernetes.io/name: frontend-app
    ports:
      - protocol: TCP
        port: 8080
